--- a/1/index.html
+++ b/1/index.html
@@ -9,13 +9,29 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script>   
+    <style>
+      .red {
+         color: red;
+        }
+    </style>
+
     <meta charset="utf-8">
-    <title></title>
-  </head>
+
+    <title> </title>
+  
+
+     </head>
+
+
   <body>
     <p> hola </p>
-    <script type="text/javascript">
+    
+    <script>
+      
       $("p").addClass("red");
+
     </script>
   </body>
 </html>
