--- a/3/index.html
+++ b/3/index.html
@@ -1,27 +1,46 @@
 <!--
   Sin modificar el HTML debes escribir los selectores que se necesitan para cada elemento pedido.
 
-  Seleccionar el H1 y cambiar el color de texto a rojo
-  Seleccionar la sección 1 (section-1) y agregar el color de fondo amarillo
-  Seleccionar el elemento con clase counter e incrementar en 10 su valor
+  Seleccionar el H1 y cambiar el color de texto a rojo OK
+  Seleccionar la sección 1 (section-1) y agregar el color de fondo amarillo ok
+  Seleccionar el elemento con clase counter e incrementar en 10 su valor ok
+
   Al hacerle click al elemento con id row-3 se debe agregar el color de fondo gris y además debe tener una transición de 1 segundo
+
   Seleccionar el h1 dentro de la sección y duplicar su font-size
+
   Seleccionar el último row dentro de la tabla (sin utilizar el id, puesto que el número de elementos podría cambiar) y agregar color de fondo rojo
 -->
 
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
+
+    <style >
+      #row-3 {
+
+        transition: 1s;
+      }
+
+
+    </style>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
+
+
     <h1> Hey !! </h1>
+
+
+
     <section class="section-1">
       <h1> Hey </h1>
       <span class="counter"> 101 </span>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </section>
+
 
     <table>
       <tbody>
@@ -52,7 +71,12 @@
       </tbody>
     </table>
 
+
+
+
+
     <form class="" action="index.html" method="post">
+
       <fieldset>
         <label for="email"> Email: </label>
         <input type="text" name="email" value="x@xyz.com">
@@ -61,6 +85,34 @@
         <input type="text" name="name" value="x@xyz.com">
 
       </fieldset>
+
     </form>
+
+
+      <script>  
+
+      $("h1").css("color", "red");
+
+      $(".section-1").css("background-color", "yellow");
+
+      var number= $(".counter").text();
+      number=parseInt(number);
+      number= number+10;
+      $(".counter").text(number);
+
+      $("#row-3").click(function(){
+      $("#row-3").css("background-color", "grey")
+    })
+      $(".section-1>h1").css("font-size", "2em")
+
+      $("table tr:last-child").css("background-color", "red")
+
+
+
+        </script>
+
+
+
+
   </body>
 </html>
