--- a/5/index.html
+++ b/5/index.html
@@ -11,9 +11,18 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
     <title></title>
   </head>
   <body>
+  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ex itaque minima sunt, incidunt ut consequuntur iste obcaecati labore, esse quaerat eos sint blanditiis dolorum ullam, assumenda tempora rem dolore.</p>
 
+	
+	<script>
+		
+		  $("p").on("click", function(){
+     		 alert("hola")
+    })
+	</script>
   </body>
 </html>
