--- a/2/index.html
+++ b/2/index.html
@@ -5,14 +5,15 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <p> hola </p>
     <script>
-      $("p").style("color", "red");
+      $("p").css("color", "red");
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    
   </body>
 </html>
