--- a/4/index.html
+++ b/4/index.html
@@ -6,6 +6,7 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -15,5 +16,17 @@
     <p> clic !! </p>
     <h3> no clic !! </h3>
     <p> clic !! </p>
+
+    <script>
+      
+    $("p").on("click", function(){
+      alert("hola")
+    })
+
+
+    </script>
+
+
+
   </body>
 </html>
