--- a/6/index.html
+++ b/6/index.html
@@ -25,8 +25,22 @@ Para la solución puedes inspirarte en: https://codepen.io/gabrieleromanato/pen/
   <head>
     <meta charset="utf-8">
     <title></title>
+     <script
+     src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
   </head>
   <body>
+    <img src="kullia baka.jpg" alt="">
 
+
+<script>
+      $(function() {
+      $("img").on("contextmenu", function( e ) {
+        e.preventDefault();
+        alert("Esta imagen esta protegida por derechos de autor");
+    });
+});
+    </script>
   </body>
 </html>
